--- a/_TS4/mod_documentation/ask_to_see_natural_outfit/README.html
+++ b/_TS4/mod_documentation/ask_to_see_natural_outfit/README.html
@@ -1,5 +1,21 @@
 <h1>🧍 Ask to see Natural Outfit</h1>
 <br/>
+This mod is primarily a demonstration of how to add custom mixer interactions to affordance lists in The Sims 4.<br/>
+<br/>
+It modifies the affordance lists in these tunings:<br/>
+<ul>
+	<li>`trait_teen`, ...</li>
+	<li>`goal_CAD_IntSocial_SmallTalk`</li>
+	<li>`social_Mixers_Toddler_Friendly_NonTouching`</li>
+</ul>
+<br/>
+Each of these lists includes the interaction:<br/>
+<ul>
+	<li>`mixer_social_targeted_friendly_MiddleScore_SeeOutfit_Everyday`, ...</li>
+</ul>
+<br/>
+The showcase registers yet another SeeOutfit interaction, illustrating how new social mixers can be integrated alongside existing ones.<br/>
+<br/>
 <h2>🌿 Disclaimer: What Is Naturism?</h2>
 Naturism is a lifestyle and philosophy that embraces **non-sexual nudity** to promote body positivity, respect for others, and harmony with nature.<br/>
 Cultural taboos and media portrayals often distort its meaning. For a deeper understanding, consult trusted sources or AI tools like Copilot, Siri, or Gemini.<br/>
@@ -26,10 +42,13 @@ These interactions are **not sexual** in nature, though perceptions may vary.<br
 To activate it remove <i>cfg/add_mixers.txt</i> anc copy <i>cfg.nsfw/add_mixers_nsfw.txt</i> into <i>cfg</i>.<br/>
 <br/>
 <h2>🐞 Known Issues</h2>
-- Sims may revert to their previous outfits very shortly after switching into their bathing outfit.<br/>
-This behavior is part of how The Sims 4 handles outfit changes and is not controlled by this mod.<br/>
-- Sims may get an embarrassed moodlet.<br/>
-- Many gamers get embarrassed when they see the censor mosaic.<br/>
+<ul>
+	<li>Many gamers get embarrassed seeing the vanilla censor mosaic.</li>
+	<li>Sims may revert to their previous outfits very shortly after switching into their bathing outfit.</li>
+	<li>Sims may get an embarrassed moodlet, especially when using the NSFW version.</li>
+</ul>
+<br/>
+Sim behaviors are part of how The Sims 4 handles reactions and/or outfit changes and is not controlled by this mod.<br/>
 <br/>
 <h2>⚠️ Requirements</h2>
 This mod requires <a href='https://github.com/Oops19/TS4-PatchXML'>TS4 Patch‑XML</a> to register the interaction.<br/>
